--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
 <style>
 :root{
-  --bg:#121212;
-  --card:#1c1c1c;
-  --border:#2a2a2a;
+  --bg:#181818;
+  --card:#202020;
+  --border:#2f2f2f;
   --text:#e0e0e0;
-  --muted:#9e9e9e;
-  --accent:#f5c518; /* IMDb yellow */
-  --blue:#5799ef;
-  --danger:#e53935;
+  --muted:#a0a0a0;
+  --accent:#f28c28;   /* naranja propio */
+  --blue:#64b5f6;
+  --danger:#ef5350;
 }
 
 *{box-sizing:border-box}
@@ -54,7 +54,7 @@ input,select{
   padding:8px 10px;
   border-radius:4px;
   border:1px solid var(--border);
-  background:#181818;
+  background:#1a1a1a;
   color:var(--text);
 }
 
@@ -93,11 +93,11 @@ input:focus,select:focus{
   border-radius:6px;
   padding:12px;
   font-weight:600;
-  background:#181818;
+  background:#1a1a1a;
   border:1px solid var(--border);
 }
 
-.fcA{color:#7ddc8a}
+.fcA{color:#81c784}
 .fcB{color:var(--blue)}
 .fcC{color:#ffb74d}
 .fcD{color:var(--danger)}
@@ -279,5 +279,3 @@ actualizar();
 
 </body>
 </html>
-
-
