Refactor index.html for better styling and layout
Updated styles and structure for improved UI.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 
 <style>
 :root{
-  --bg:#181818;
-  --card:#202020;
-  --border:#2f2f2f;
-  --text:#e0e0e0;
-  --muted:#a0a0a0;
-  --accent:#f28c28;   /* naranja propio */
-  --blue:#64b5f6;
-  --danger:#ef5350;
+  --bg:#202424;
+  --card:#262b2b;
+  --border:#343a3a;
+  --text:#e6e6e6;
+  --muted:#b0b7b7;
+  --accent:#5fb3a2;
 }
+
 
 *{box-sizing:border-box}
 
@@ -279,3 +278,4 @@ actualizar();
 
 </body>
 </html>
+
