Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FamilyCheck</title>
+<img src="assets/logo.png" alt="FamilyCheck" class="logo">
+
 
 <style>
 :root{
@@ -278,4 +280,5 @@ actualizar();
 
 </body>
 </html>
+
 
