--- a/index.html
+++ b/index.html
@@ -4,281 +4,114 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FamilyCheck</title>
-<img src="assets/logo.png" alt="FamilyCheck" class="logo">
-
 
 <style>
 :root{
-  --bg:#202424;
-  --card:#262b2b;
-  --border:#343a3a;
+  --bg:#2a2f2f;
+  --card:#313737;
+  --border:#3f4646;
   --text:#e6e6e6;
-  --muted:#b0b7b7;
-  --accent:#5fb3a2;
+  --muted:#b0b8b8;
+  --accent:#6fc2b1;
 }
-
-
-*{box-sizing:border-box}
 
 body{
   margin:0;
-  padding:16px;
+  font-family:system-ui, sans-serif;
   background:var(--bg);
   color:var(--text);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-h1{
-  font-size:1.3rem;
-  margin-bottom:16px;
-  font-weight:600;
+.container{
+  max-width:900px;
+  margin:auto;
+  padding:40px 16px;
+  text-align:center;
+}
+
+.logo{
+  max-width:280px;
+  width:100%;
+  margin:0 auto 12px;
+}
+
+.subtitle{
+  color:var(--muted);
+  margin-bottom:32px;
+  font-size:1.1rem;
+}
+
+.search{
+  width:100%;
+  padding:14px;
+  font-size:1.1rem;
+  border-radius:8px;
+  border:1px solid var(--border);
+  background:#232828;
+  color:var(--text);
+}
+
+.primary{
+  margin-top:24px;
+  padding:14px;
+  width:100%;
+  font-size:1.1rem;
+  background:var(--accent);
+  border:none;
+  border-radius:8px;
+  color:#000;
+  cursor:pointer;
+}
+
+.primary:hover{
+  opacity:.9;
+}
+
+.section{
+  margin-top:48px;
+  text-align:left;
 }
 
 .card{
   background:var(--card);
   border:1px solid var(--border);
+  padding:12px;
   border-radius:8px;
-  padding:16px;
-  margin-bottom:16px;
-}
-
-label{
-  display:block;
-  margin-top:12px;
-  font-size:0.85rem;
-  color:var(--muted);
-}
-
-input,select{
-  width:100%;
-  margin-top:6px;
-  padding:8px 10px;
-  border-radius:4px;
-  border:1px solid var(--border);
-  background:#1a1a1a;
-  color:var(--text);
-}
-
-input:focus,select:focus{
-  outline:none;
-  border-color:var(--accent);
-}
-
-.grid{
-  display:grid;
-  grid-template-columns: 1.2fr repeat(4, 44px);
-  gap:6px;
-  align-items:center;
-  font-size:0.85rem;
-}
-
-.grid strong{
-  font-weight:500;
-  color:#fff;
-}
-
-.radio{
-  text-align:center;
-}
-
-.presencia{
-  grid-column:1/-1;
-  margin-left:4px;
-  margin-top:4px;
-  font-size:0.75rem;
-  color:var(--muted);
-  display:none;
-}
-
-.result{
-  border-radius:6px;
-  padding:12px;
-  font-weight:600;
-  background:#1a1a1a;
-  border:1px solid var(--border);
-}
-
-.fcA{color:#81c784}
-.fcB{color:var(--blue)}
-.fcC{color:#ffb74d}
-.fcD{color:var(--danger)}
-
-button{
-  width:100%;
-  margin-top:10px;
-  padding:12px;
-  border:none;
-  border-radius:6px;
-  background:var(--accent);
-  color:#000;
-  font-weight:600;
-  cursor:pointer;
-}
-
-button.secondary{
-  background:#2a2a2a;
-  color:var(--text);
-}
-
-.list-item{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:10px 0;
-  border-bottom:1px solid var(--border);
-  font-size:0.9rem;
-}
-
-.list-item small{
-  color:var(--muted);
-}
-
-.trash{
-  background:none;
-  border:none;
-  color:var(--danger);
-  font-size:1.1rem;
-  cursor:pointer;
+  margin-bottom:12px;
 }
 </style>
 </head>
 
 <body>
 
-<h1>➕ Añadir ficha · FamilyCheck</h1>
+<div class="container">
 
-<div class="card">
-  <label>Tipo</label>
-  <select id="tipo">
-    <option value="pelicula">Película</option>
-    <option value="libro">Libro</option>
-  </select>
+  <img src="assets/logo.png" alt="FamilyCheck" class="logo">
 
-  <label>Título</label>
-  <input id="titulo">
-
-  <label>Año / ISBN</label>
-  <input id="extra1">
-
-  <label>Director / Autor</label>
-  <input id="extra2">
-</div>
-
-<div class="card">
-  <div class="grid">
-    <strong></strong>
-    <strong>N</strong><strong>L</strong><strong>M</strong><strong>S</strong>
-
-<script>
-const categorias=["sexo","violencia","lenguaje","drogas","miedo"];
-document.write(categorias.map(c=>`
-<strong>${c.charAt(0).toUpperCase()+c.slice(1)}</strong>
-${[0,1,2,3].map(v=>`
-<div class="radio">
-  <input type="radio" name="${c}" value="${v}"
-    ${v===0?"checked":""}
-    onchange="mostrar('${c}')">
-</div>`).join("")}
-<div class="presencia" id="p_${c}">
-  ¿Puntual o continuado?
-  <label><input type="radio" name="pr_${c}" value="puntual" checked onchange="actualizar()"> Puntual</label>
-  <label><input type="radio" name="pr_${c}" value="continuado" onchange="actualizar()"> Continuado</label>
-</div>
-`).join(""));
-</script>
+  <div class="subtitle">
+    ¿Es adecuado para tus hijos?
   </div>
-</div>
 
-<div class="result" id="resultado">
-Edad recomendada: —<br>FamilyCheck: —
-</div>
+  <input
+    type="text"
+    class="search"
+    placeholder="Buscar película, serie o libro…"
+    disabled
+  >
 
-<button onclick="guardar()">Guardar ficha</button>
-<button class="secondary" onclick="toggleListado()">📋 Ver fichas</button>
+  <button class="primary" onclick="location.href='add.html'">
+    ➕ Añadir ficha
+  </button>
 
-<div class="card" id="listado" style="display:none;">
-  <input id="buscador" placeholder="Buscar..." oninput="renderListado()">
-  <div id="resultadoListado"></div>
-</div>
+  <div class="section">
+    <h3>Últimos contenidos añadidos</h3>
 
-<script>
-let estado={};
-
-function mostrar(cat){
-  const nivel=+document.querySelector(`input[name=${cat}]:checked`).value;
-  document.getElementById(`p_${cat}`).style.display = nivel>=2?"block":"none";
-  actualizar();
-}
-
-function actualizar(){
-  categorias.forEach(c=>{
-    const n=+document.querySelector(`input[name=${c}]:checked`).value;
-    if(n>=2){
-      const p=document.querySelector(`input[name=pr_${c}]:checked`).value;
-      estado[c]={nivel:n,pres:p};
-    }else estado[c]={nivel:n};
-  });
-  calcularFC();
-}
-
-function calcularFC(){
-  let fc=9;
-  Object.values(estado).forEach(d=>{
-    if(d.nivel===2) fc-=d.pres==="continuado"?1:0.5;
-    if(d.nivel===3) fc-=d.pres==="continuado"?2:1;
-  });
-  fc=Math.max(1,Math.min(10,Math.round(fc)));
-  let edad=fc>=8?7:fc>=6?12:16;
-  let clase=fc>=9?"fcA":fc>=7?"fcB":fc>=4?"fcC":"fcD";
-  resultado.innerHTML=`Edad recomendada: ${edad}+<br>FamilyCheck: <span class="${clase}">${fc}/10</span>`;
-}
-
-function guardar(){
-  const f={
-    id:crypto.randomUUID(),
-    titulo:titulo.value,
-    extra1:extra1.value,
-    extra2:extra2.value,
-    estado
-  };
-  let data=JSON.parse(localStorage.getItem("fc")||"[]");
-  if(data.some(x=>x.titulo.toLowerCase()===f.titulo.toLowerCase())){
-    alert("Ya existe");
-    return;
-  }
-  data.push(f);
-  localStorage.setItem("fc",JSON.stringify(data));
-  alert("Ficha guardada");
-}
-
-function toggleListado(){
-  listado.style.display=listado.style.display==="none"?"block":"none";
-  renderListado();
-}
-
-function renderListado(){
-  const data=JSON.parse(localStorage.getItem("fc")||"[]");
-  resultadoListado.innerHTML=data.map(f=>`
-<div class="list-item">
-  <div>
-    <strong>${f.titulo}</strong><br>
-    <small>${f.extra1} · ${f.extra2}</small>
+    <div class="card">Superman (2025) · FC 8 · 12+</div>
+    <div class="card">Harry Potter · FC 9 · 7+</div>
+    <div class="card">El Hobbit · FC 8 · 7+</div>
   </div>
-  <button class="trash" onclick="borrar('${f.id}')">🗑</button>
-</div>`).join("");
-}
 
-function borrar(id){
-  let data=JSON.parse(localStorage.getItem("fc")||"[]");
-  data=data.filter(f=>f.id!==id);
-  localStorage.setItem("fc",JSON.stringify(data));
-  renderListado();
-}
-
-actualizar();
-</script>
+</div>
 
 </body>
 </html>
-
-
