--- a/home-mockup.html
+++ b/home-mockup.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FamilyCheck – Home Mockup</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
@@ -20,11 +21,13 @@
 
 body{
   margin:0;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family:'Inter', system-ui, sans-serif;
   background:
-    radial-gradient(circle at top, #2a3131 0%, #1e2323 60%);
+    radial-gradient(1200px 500px at top center,#2c3333 0%,#1b1f1f 55%),
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.05'/%3E%3C/svg%3E");
   color:var(--text);
 }
+
 
 .container{
   max-width:1100px;
@@ -108,11 +111,16 @@ body{
 }
 
 .card{
-  background:linear-gradient(180deg,#2f3535,#2a3030);
-  border:1px solid var(--border);
-  border-radius:8px;
-  padding:14px;
+  background:
+    linear-gradient(180deg,#323838,#2a3030);
+  border:1px solid rgba(255,255,255,.06);
+  border-radius:10px;
+  padding:16px;
+  box-shadow:
+    0 10px 30px rgba(0,0,0,.35),
+    inset 0 1px 0 rgba(255,255,255,.03);
 }
+
 
 .card-title{
   font-weight:600;
@@ -120,9 +128,10 @@ body{
 }
 
 .card-meta{
-  font-size:.9rem;
-  color:var(--muted);
+  margin-top:4px;
+  font-weight:600;
 }
+
 
 /* FC BADGES */
 .fc-a{color:#7fdcc8}
@@ -137,6 +146,20 @@ body{
   font-size:.85rem;
   margin-top:80px;
 }
+  .tagline{
+  font-size:1.15rem;
+  font-weight:500;
+}
+
+.section h2{
+  font-weight:600;
+  letter-spacing:.2px;
+}
+
+.card-title{
+  font-weight:600;
+}
+
 </style>
 </head>
 
