--- a/home-mockup.html
+++ b/home-mockup.html
@@ -42,10 +42,13 @@ body{
 }
 
 .logo{
-  max-width:260px;
-  width:100%;
-  margin-bottom:12px;
+  width: 220px;
+  max-width: 80%;
+  margin: 0 auto 12px;
+  display: block;
+  filter: drop-shadow(0 8px 20px rgba(0,0,0,.45));
 }
+
 
 .tagline{
   color:var(--muted);
