--- a/home-mockup.html
+++ b/home-mockup.html
@@ -42,13 +42,11 @@ body{
 }
 
 .logo{
-  width: 220px;
-  max-width: 80%;
-  margin: 0 auto 12px;
-  display: block;
-  filter: drop-shadow(0 8px 20px rgba(0,0,0,.45));
+  max-width: 260px;
 }
-
+@media (max-width:480px){
+  .logo{ max-width:180px; }
+}
 
 .tagline{
   color:var(--muted);
@@ -77,7 +75,7 @@ body{
   padding:14px 20px;
   border:none;
   background:var(--accent);
-  color:#0f1a18;
+  color:#0b1413;
   font-weight:600;
   border-radius:0 6px 6px 0;
   cursor:pointer;
@@ -133,6 +131,13 @@ body{
 .card-meta{
   margin-top:4px;
   font-weight:600;
+}
+  
+.card:hover{
+  transform: translateY(-2px);
+  box-shadow:
+    0 14px 40px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.05);
 }
 
 
