--- a/home-mockup.html
+++ b/home-mockup.html
@@ -42,11 +42,12 @@ body{
 }
 
 .logo{
-  max-width: 260px;
+  max-width:260px;
+  display:block;
+  margin:0 auto 12px;
+  filter: drop-shadow(0 8px 20px rgba(0,0,0,.45));
 }
-@media (max-width:480px){
-  .logo{ max-width:180px; }
-}
+
 
 .tagline{
   color:var(--muted);
