Enhance logo and tagline styles for mobile view
Increased logo max-width and adjusted tagline margins and font size for better responsiveness.

--- a/home-mockup.html
+++ b/home-mockup.html
@@ -49,10 +49,17 @@ body{
   filter: drop-shadow(0 8px 20px rgba(0,0,0,.45));
 }
 @media (max-width:480px){
-  .logo{ max-width:300px; }
+  .logo{
+    max-width:360px;
+    margin-bottom:2px;
+  }
+
+  .tagline{
+    margin-top:-2px;
+    margin-bottom:18px;
+    font-size:1.05rem;
+  }
 }
-
-
 
 .tagline{
   color:var(--muted);
