--- a/home-mockup.html
+++ b/home-mockup.html
@@ -183,6 +183,25 @@ body{
 .card-title{
   font-weight:600;
 }
+/* FC hierarchy – HOME */
+.card-meta{
+  display:flex;
+  align-items:baseline;
+  gap:12px;
+  margin-top:4px;
+}
+
+.fc-score{
+  font-size:1.2rem;
+  font-weight:700;
+  letter-spacing:.4px;
+}
+
+.age{
+  font-size:.85rem;
+  font-weight:600;
+  color:var(--muted);
+}
 
 </style>
 </head>
@@ -208,7 +227,7 @@ body{
     <div class="cards">
       <div class="card">
         <div class="card-title">Misión Imposible</div>
-        <div class="card-meta fc-b">7/10 · 12+</div>
+        <div class="card-meta fc-b">FC-7 · 12+</div>
       </div>
       <div class="card">
         <div class="card-title">Frozen</div>
