Fix HTML structure and update button to link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FamilyCheck – Home Mockup</title>
+<title>FamilyCheck – Home</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -219,7 +219,8 @@ body{
       <button>Buscar</button>
     </div>
 
-    <button class="add-btn">+ Añadir ficha</button>
+    <a href="add.html" class="add-btn">+ Añadir ficha</a>
+
   </header>
 
   <section class="section">
@@ -227,7 +228,7 @@ body{
     <div class="cards">
       <div class="card">
         <div class="card-title">Misión Imposible</div>
-        <div class="card-meta fc-b">FC 7.0  12+</div>
+        <div class="card-meta fc-b">FC 7  12+</div>
       </div>
       <div class="card">
         <div class="card-title">Frozen</div>
@@ -284,6 +285,7 @@ body{
 
 </body>
 </html>
+
 
 
 
