--- a/index.html
+++ b/index.html
@@ -99,13 +99,35 @@ body{
 
 /* ADD */
 .add-btn{
-  background:none;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  gap:6px;
+
+  text-decoration:none;
+  background:rgba(255,255,255,.02);
   border:1px solid var(--border);
   color:var(--text);
-  padding:10px 18px;
-  border-radius:6px;
-  cursor:pointer;
+
+  padding:12px 20px;
+  border-radius:8px;
+
+  font-size:.9rem;
+  font-weight:600;
+  line-height:1;
+
+  transition:background .2s ease, border-color .2s ease, transform .15s ease;
 }
+
+.add-btn:hover{
+  background:var(--bg-soft);
+  border-color:#4a5454;
+}
+
+.add-btn:active{
+  transform:translateY(1px);
+}
+
 .add-btn:hover{
   background:var(--bg-soft);
 }
@@ -285,6 +307,7 @@ body{
 
 </body>
 </html>
+
 
 
 
