Add Supabase client initialization
Initialize Supabase client with URL and key.

--- a/add.html
+++ b/add.html
@@ -275,6 +275,13 @@ function borrar(id){
 }
 
 actualizar();
+
+  const supabaseUrl = 'https://sdjwodswgtxgqirgqlpa.supabase.co'
+  const supabaseKey = 'sb_publishable_ea51fJNYUVesmBpSMGzqHw_xhLty22L'
+  const supabase = supabase.createClient(supabaseUrl, supabaseKey)
+</script>
+
+  
 </script>
 
 </body>
