Rename supabase variable to sb

--- a/add.html
+++ b/add.html
@@ -272,7 +272,7 @@ function borrar(id){
 
   const supabaseUrl = 'https://sdjwodswgtxgqirgqlpa.supabase.co'
   const supabaseKey = 'sb_publishable_ea51fJNYUVesmBpSMGzqHw_xhLty22L'
-  const supabase = supabase.createClient(supabaseUrl, supabaseKey)
+  const sb = supabase.createClient(supabaseUrl, supabaseKey)
   
 </script>
 
