--- a/add.html
+++ b/add.html
@@ -231,9 +231,14 @@ async function guardar(){
     isbn: tipoVal === "libro" ? extra1.value || null : null
   };
 
-  const { error } = await sb
-    .from("fichas")
-    .insert([ficha]);
+  const { data, error } = await sb
+  .from("fichas")
+  .insert([ficha])
+  .select();
+
+console.log("DATA:", data);
+console.log("ERROR:", error);
+
 
   if(error){
     alert(error.message);
